# pyzorder

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  test_pyzorder.py
pyzorder/: __init__.py  pyzorder.py
