[metadata]
name = pyzorder
version = 0.0.1
description = z-order curve (a.k.a. Morton order) implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/smatsumoto78/pyzorder
author = Shinji Matsumoto
author_email = s.kawagt@gmail.com

[options]
packages=pyzorder
